--- a/bst263_final_project.ipynb
+++ b/bst263_final_project.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "bst263-final-project.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +40,8 @@
         "\n",
         "from sklearn.svm import SVC, l1_min_c\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
+        "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+        "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
         "from sklearn.ensemble import GradientBoostingRegressor\n",
         "from sklearn.ensemble import RandomForestRegressor"
       ],
