--- a/BST_263_Final_Project.ipynb
+++ b/BST_263_Final_Project.ipynb
@@ -726,10 +726,10 @@
       "metadata": {
         "id": "ZdRy03NC4IuB",
         "colab_type": "code",
-        "outputId": "83834261-43cf-480d-b807-f62f23802ae5",
+        "outputId": "52e3d58a-5e37-4b91-846f-2d30f4f9dbeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 340
+          "height": 342
         }
       },
       "source": [
@@ -748,7 +748,7 @@
         "cutoffs_df.columns.name = 'Variance Explained'\n",
         "cutoffs_df"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -813,7 +813,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -2471,30 +2471,28 @@
       "metadata": {
         "id": "ILKQqB-kfpX0",
         "colab_type": "code",
-        "outputId": "91d413ca-e1e6-4ea6-f70e-7b5ba5544444",
+        "outputId": "7e3b24aa-4867-41c0-e676-01fc1abc9ee8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 34
         }
       },
       "source": [
-        "np.where(y_test_pred_xgb != y_test)"
+        "logistic.best_params_"
       ],
-      "execution_count": 68,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(array([  8,  10,  17,  22,  23,  24,  39,  41,  45,  58,  61,  62,  67,\n",
-              "         72,  73,  74,  85,  86,  87,  88,  90,  92,  93,  98, 101, 106,\n",
-              "        112, 113, 118, 125, 131, 132, 138, 139, 146]),)"
+              "{'C': 0.042169650342858224, 'intercept_scaling': 100000}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 68
+          "execution_count": 72
         }
       ]
     }
